Changelog started November 2006; Currently at version 0.3

Legend:
--------------------------------------------------------------------------------
 ! Minor change or bugfix. (don't bother to log typos except between releases.)
 * Change like above, but affects templates.
 & Change that affects a language file. (make two if it affects templates too.)
 + Feature addition or improvement.
 - Feature or option removal.
 % Development flag or note, such as branching.


Pretty URLs 0.3                                                 January 20, 2007
================================================================================
 + Base: Added some Turkish (and other) characters. (Subs-PrettyUrls.php)
 ! ext-none: Fixed some problems in SSI.php.
 + Base: Give new topics a pretty URL. (Subs-Post.php)
 + TP-ext-none: Change the URLs of the front page in TP_boardNews(). (TPortal.php)
 + ext-none: Change the URLs of Stats.php.
 + Added a Package List. (packages.xml)
 + Added the canonicaliseUrl() function to fix relative URLs. (PackageGet.php)

Pretty URLs 0.2                                                December 26, 2006
================================================================================
 ! Base: Don't give pretty URLs to recycled topics, and fixed '&quot;' issues. (Subs-PrettyUrls.php)
 ! Base: Adding and changing board URLs is now done through modifyBoard(). (Subs-Boards.php)
 ! ext-none: Fixed the Display template because a change hadn't been committed somehow.
 ! Base: Don't add an action in .htaccess because it won't work with an invalid board URL. (QueryString.php)
 + ext-none: Replace topic urls in SSI.php, News.php and Recent.php.

Pretty URLs 0.1                                                December 13, 2006
================================================================================
 + Base: Added generatePrettyUrl function and $characterHash with almost all characters from latin-1. (Subs-PrettyUrls.php)